2010-04-26  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05
	* add jet_calcxsec_x tool, which calculates the effective
	cross-sections to properly combine *inclusuve* QCD samples, which
	are produced with a lower but no upper pthat boundary

2010-04-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-04
	* various updates to jih & jig (Hauke & Philipp)

2010-04-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-03
	* add config/ directory, containing several useful configuration
	files to be used with jet_inspect_profiles_x
	* example: jet_inspect_profiles_x jip_vseta.config jip_ptrsp.config -inputs ...
	* the above example will draw the closure of the pt response as a
	function of eta for several pT ranges
	
	* tag V00-07-02
	* improvements to jet_inspect_profiles_x
	* add parameter 'opath' to jet_inspect_histos_x
	* add parameter 'opath' to jet_inspect_graphs_x

2010-04-01  Andreas Hinzmann  <hinzmann@cern.ch>

	* change 'buh' error message

2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* implement hlines parameter feature for jet_inspect_profiles_x
	tool

2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* add jet_inspect_profiles_x tool

2010-03-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* CommandLine: several *.config files can now be passed

2010-03-08  Hauke Held  <held@cern.ch>

	* tag V00-05-09
	* changed tag because V00-05-08 was already taken

	* tag V00-05-08
	* added foundBAncestor flag in GenJetLeptonFinder

2009-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-07
	* jih: reset maximum of first histogram according to maximum of
	additional histograms

	* tag V00-05-06
	* jih bugfix for inclusive distributions (when there are no bins!)

2009-11-22  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-05